elpa-elpa4/envs/dev/wef/blueprint/service-app-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: wef
---
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  selector:
    app: wef
