elpa-elpa4/envs/dev/wef/blueprint/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: wef-dest-rule
spec:
  host: dev-wef
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8080
        tls:
          mode: DISABLE
      - port:
          number: 8081
        tls:
          mode: DISABLE
